get tasks by filter
