# endpoints/03-api/src/main/scala/ptpger/routes/TasksRoutes.scala
@@ -13,6 +13,7 @@ import uz.scala.http4s.utils.Routes
 
 import ptpger.algebras.TaskAlgebra
 import ptpger.domain._
+import ptpger.domain.args.tasks._
 final case class TasksRoutes[F[_]: JsonDecoder: MonadThrow](
     tasks: TaskAlgebra[F]
   ) extends Routes[F, AuthedUser] {
@@ -21,12 +22,14 @@ final case class TasksRoutes[F[_]: JsonDecoder: MonadThrow](
   override val public: HttpRoutes[F] = HttpRoutes.empty[F]
 
   override val `private`: AuthedRoutes[AuthedUser, F] = AuthedRoutes.of {
-    case ar @ POST -> Root as _ =>
+    case ar @ POST -> Root / "create" as _ =>
       ar.req.decodeR[TaskInput] { taskInput =>
         tasks.create(taskInput).flatMap(Created(_))
       }
-    case GET -> Root as _ =>
-      tasks.get.flatMap(Ok(_))
+    case ar @ POST -> Root as _ =>
+      ar.req.decodeR[TaskFilters] { filters =>
+        tasks.get(filters).flatMap(Ok(_))
+      }
     case ar @ PUT -> Root / UUIDVar(id) as user =>
       ar.req.decodeR[TaskUpdateInput] { taskInput =>
         tasks.update(id.coerce[TaskId], user.id, taskInput) >> Accepted()
